Arruma rota de usuarios e cria doc-swagger de users
