# routes/users.js
@@ -5,9 +5,9 @@ var auth = require('./../middlewares/ensureAuthenticated')
 
 /* USERS ROUTES */
 router.get('/', UserController.index);
-router.post('/', UserController.store);
+router.post('/store', UserController.store);
 router.get('/:id', UserController.show);
-router.put('/', auth.ensureAuthenticated(), UserController.update);
-router.delete('/:id', UserController.destroy);
+router.put('/update', auth.ensureAuthenticated(), UserController.update);
+router.delete('/:id/delete', UserController.destroy);
 
 module.exports = router;
